# potato-crosshair

./: .gitignore  CMakeLists.txt  README.md
resources/: app.rc
src/: app_controller.cpp  app_controller.h  app_types.h  crosshair_renderer.cpp  crosshair_renderer.h  main.cpp  main_window.cpp  main_window.h  overlay_window.cpp  overlay_window.h  resource.h  settings_store.cpp  settings_store.h  tray_icon.cpp  tray_icon.h
